# course-scheduler

./: .gitignore  .pre-commit-config.yaml  Procfile  pyproject.toml  readme.md
courses/: accounts_urls.py  forms.py  models.py  solver.py  tasks.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_period_avoid.py  0003_alter_anchoredcourse_course.py  0004_scheduleitem_solvedschedule.py
scheduler/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/courses/: _home.html  data_summary.html  home.html  modal_edit.html  solver_results.html  sovler_result_detail.html
templates/courses/accounts/: login.html  signup.html
templates/courses/home_components/: add_form.html  course_tile.html  edit_delete_buttons.html  mandatory_schedule_tile.html  modal_delete_confirmation.html  modal_edit.html  model_tile.html  periods.html  table_header.html  teachers.html
templates/courses/solver_results_components/: table.html
tests/courses/: test_solver.py
