[tool.poetry]
name = "class-scheduler"
version = "0.1.0"
description = "A web app built over a pyomo solver to determine a suitable schedule for school classes."
authors = ["Raymond DeVries"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-bulma = "^0.8.2"
Pyomo = "^6.0.1"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.13.0"
pytest-django = "^4.4.0"
model-bakery = "^1.3.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
